# company-structure

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  init_test_rights.sh  pyproject.toml
core/: settings.py  urls.py
staff/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
staff/management/commands/: seed_db.py
staff/migrations/: 0001_initial.py
staff/templates/staff/: index.html
staff/tests/: conftest.py  test_api.py
